:new:Created using Colab

--- a/Credit_Scoring_Analyst.ipynb
+++ b/Credit_Scoring_Analyst.ipynb
@@ -31,16 +31,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Credit Scoring Analytics"
+        "***\n",
+        "# **Credit Scoring Analytics**\n",
+        "***\n",
+        "\n",
+        "| Created by : Syariful Musthofa |\n",
+        "|---|"
       ],
       "metadata": {
-        "id": "13drKBmxNf1k"
+        "id": "WpmXZveaU0Mp"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Business Understanding"
+        "***\n",
+        "## Business Understanding\n",
+        "***"
       ],
       "metadata": {
         "id": "Vvp8n3OwOMVi"
@@ -49,11 +56,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Credit Scoring Analysis** merupakan sebuah proses analisis yang dilakukan oleh pemberi pinjaman (*lenders*) atau institusi keuangan untuk menentukan kelayakan kredit (*creditworhiness*) dari peminjam (*borrowers*).\n",
+        "**Business Context**\n",
         "\n",
-        "Hasil dari Credit Scoring Analysis digunakan sebagai tolak ukur dalam menentukan suku bunga (*interest rate* ) dari sebuah kredit. Semakin tinggi resiko dari sebuah kredit, biasanya semakin tinggi pula suku bunganya. Begitupun sebaliknya, semakin rendah resiko sebuah kredit, sekamin rendah pula suku bunganya.\n",
+        "`Credit Scoring Analytics` merupakan sebuah proses analisis yang dilakukan oleh pemberi pinjaman atau `lenders` maupun institusi keuangan untuk menentukan kelayakan kredit (`creditworhiness`) dari peminjam atau `borrowers`.\n",
         "\n",
-        "Bagi institusi keuangan yang mengutamakan keamanan, biasanya cenderung untuk menerima pengajuan kredit dengan resiko yang rendah. Di lain sisi, institusi keuangan yang ingin memaksimalkan keuntungan perlu mencari mencari tingkat risiko kredit yang optimal. Hal ini tentunya membuat praktik **Credit Scoring Analytics** ini menjadi krusial untuk suatu institusi keuangan."
+        "Hasil dari dari `credit scoring analytics` ini dapat digunakan sebagai tolak ukur dalam menentukan suku bunga atau `interest rate` dari sebuah kredit. Secara umum `semakin tinggi risiko` dari sebuah kredit, maka `semakin tinggi pula suku bunganya`. Begitupun sebaliknya, `semakin rendah risiko` dari sebuah kredit, maka `semakin rendah pula suku bunganya`.\n",
+        "\n",
+        "Sebagian institusi keuangan yang mengutamakan keamanan, biasanya cenderung untuk menerima pengajuan kredit atau pinjaman dengan risiko yang rendah. Di lain sisi, sebagian institusi keuangan yang ingin memaksimalkan keuntungan perlu mencari tingkat risiko kredit yang optimal. Hal inilah yang menjadikan praktik `credit scoring analytics` menjadi krusial untuk suatu institusi keuangan.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Problem Statement**\n",
+        "\n",
+        "Indonesia merupakan negara dengan jumlah penduduk yang banyak, yang sebagian masyarakatnya melakukan pengajuan kredit. Hal ini menjadi tantangan tersendiri bagi institusi keuangan untuk melakukan penilaian kelayakan kredit secara akurat dan efisien. Banyaknya jumlah orang yang mengajukan kredit dan variasi profil peminjam membuat proses analisis risiko kredit menjadi semakin kompleks. Selain itu seiring dengan meningkatnya akses terhadap teknologi dan data, insitusi keuangan perlu mengoptimalkan proses credit scoring analysis agar `lebih efisien, mengurangi risiko kredit macet, dan meningkatkan profitabilitas`.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Goals**\n",
+        "Tujaun dari project ini yaitu mengoptimalkan proses pemeriksaan risiko kredit ketika pengajuan pinjaman berlangsung dengan menerapkan model `machine learning`.\n",
+        "\n",
+        "Pada project ini akan menggunakan beberapa model machine learning, di antaranya yaitu `logistic regression`, `decision tree`, `random forest`, `support vector machine`, and `K-Nearest Neighbors (KNN)`. Berdasarkan beberapa model machine learning yang dibangun tersebut, akan dipilih model dengan performa dan akurasi terbaik.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Analytics Approach**\n",
+        "\n",
+        "`Coming Soon`"
       ],
       "metadata": {
         "id": "3UUcDdgX67on"
@@ -62,7 +90,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data Understanding"
+        "***\n",
+        "## Data Understanding\n",
+        "***"
       ],
       "metadata": {
         "id": "iLfigBaJOOAO"
@@ -71,23 +101,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pada project ini, dataset yang digunakan yaitu [Dataset Credit score classification](https://www.kaggle.com/datasets/parisrohan/credit-score-classification) yang terdiri dari berbagai informasi kredit terkait setiap individu selama tahun yang dimuat dalam 27 *feature* atau kolom. Dengan detail sebagai berikut :\n",
+        "**Dataset Source & Content**\n",
         "\n",
-        "# Dataset Credit Score Classification Description\n",
+        "Pada project ini, dataset yang digunakan yaitu [Dataset Credit score classification](https://www.kaggle.com/datasets/parisrohan/credit-score-classification) yang terdiri dari berbagai informasi kredit terkait setiap individu selama tahun yang dimuat dalam `27 feature`.\n",
         "\n",
-        "| **Column Name**           | **Description**                                                                                         |\n",
-        "|---------------------------|---------------------------------------------------------------------------------------------------------|\n",
-        "| **ID**                    | Kolom ini merupakan indeks dari dataset yang akan kita gunakan.                                         |\n",
-        "| **Customer_ID**           | Kolom ini berisi customer ID yang bersifat unik.                                                        |\n",
-        "| **Month**                 | Kolom ini merepresentasikan bulan dalam satu tahun.                                                     |\n",
-        "| **Name**                  | Kolom ini berisi nama dari pelanggan tersebut.                                                          |\n",
-        "| **Age**                   | Kolom ini memuat informasi terkait umur dari seorang pelanggan.                                         |\n",
-        "| **SSN**                   | Kolom ini berisi informasi terkait SSN (mirip seperti NIK) dari seorang pelanggan.                      |\n",
-        "| **Occupation**            | Kolom ini berisi informasi pekerjaan dari seorang pelanggan.                                            |\n",
-        "| **Annual_Income**         | Kolom ini berisi informasi terkait total pendapatan dari seorang pelanggan per tahun.                   |\n",
-        "| **Monthly_Inhand_Salary** | Kolom ini berisi informasi terkait gaji pokok perbulan dari seorang pelanggan.                         |\n",
-        "| **Num_Bank_Accounts**     | Kolom ini menunjukkan jumlah rekening bank yang dimiliki seorang pelanggan.                            |\n",
-        "| **Num_Credit_Card**       | Kolom ini menunjukkan jumlah kartu kredit yang dimiliki seorang pelanggan.                             |\n",
+        "<br>\n",
+        "\n",
+        "**Dataset Credit Score Classification Description**\n",
+        "\n",
+        "| **Column Name** | **Description** |\n",
+        "|-----|-----|\n",
+        "| **ID** | Kolom ini merupakan indeks dari dataset yang akan kita gunakan. |\n",
+        "| **Customer_ID**| Kolom ini berisi customer ID yang bersifat unik. |\n",
+        "| **Month**| Kolom ini merepresentasikan bulan dalam satu tahun.|\n",
+        "| **Name**| Kolom ini berisi nama dari pelanggan tersebut.|\n",
+        "| **Age**| Kolom ini memuat informasi terkait umur dari seorang pelanggan.|\n",
+        "| **SSN**| Kolom ini berisi informasi terkait SSN (mirip seperti NIK) dari seorang pelanggan.|\n",
+        "| **Occupation**| Kolom ini berisi informasi pekerjaan dari seorang pelanggan.|\n",
+        "| **Annual_Income**| Kolom ini berisi informasi terkait total pendapatan dari seorang pelanggan per tahun.|\n",
+        "| **Monthly_Inhand_Salary** | Kolom ini berisi informasi terkait gaji pokok perbulan dari seorang pelanggan.|\n",
+        "| **Num_Bank_Accounts**| Kolom ini menunjukkan jumlah rekening bank yang dimiliki seorang pelanggan.|\n",
+        "| **Num_Credit_Card**| Kolom ini menunjukkan jumlah kartu kredit yang dimiliki seorang pelanggan.|\n",
         "| **Interest_Rate**         | Kolom ini menunjukkan jumlah bunga kartu kredit yang dikenakan kepada seorang pelanggan.                |\n",
         "| **Num_of_Loan**           | Kolom ini berisi informasi terkait jumlah pinjaman dari seorang pelanggan.                             |\n",
         "| **Type_of_Loan**          | Kolom ini berisi informasi terkait jenis pinjaman yang dimiliki seorang pelanggan (Not Specified, Personal Loan, Student Loan, dll.). |\n",
