:new: Created using Colab

--- a/Credit_Scoring_Analyst.ipynb
+++ b/Credit_Scoring_Analyst.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "V28",
       "include_colab_link": true
     },
@@ -3410,6 +3409,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "**Observation:**\n",
         "\n",
         "Setelah melakukan validasi terhadap beberapa nilai yang tidak biasa tersebut, dapat diketahui bahwa nilai tersebut merupakan nilai yang tidak valid. Jika melakukan validasi secara teliti, maka akan ditemukan beberapa invalid value pada beberapa feature seperti berikut.\n",
@@ -3427,7 +3427,7 @@
         "\n",
         "**Note:**\n",
         "\n",
-        "Tahapan berikutnya yaitu seluruh nilai tersebut perlu diperbaiki sebelum diolah lebih lanjut. Untuk memperbaikinya, sebagian besar `invalid value` akan diubah sebagai `missing value` atau `nilai nol` sesuai dengan `background knowledge` dari permasalahan ini."
+        "Tahapan berikutnya yaitu seluruh nilai tersebut perlu diperbaiki sebelum diolah lebih lanjut. Untuk memperbaikinya, sebagian besar `invalid value` akan diubah sebagai `missing value` sesuai dengan `background knowledge` dari permasalahan ini."
       ],
       "metadata": {
         "id": "LeVuT3rOHiw0"
@@ -5822,12 +5822,12 @@
         ")"
       ],
       "metadata": {
-        "id": "dv2HrM6FTY2C",
-        "outputId": "c472fe8b-3a92-4343-949f-620f60eb0114",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "dv2HrM6FTY2C",
+        "outputId": "c472fe8b-3a92-4343-949f-620f60eb0114"
       },
       "execution_count": 37,
       "outputs": [
@@ -7204,39 +7204,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tahap berikutnya yaitu encoding dan scaling. Proses ini bertujuan untuk menyiapkan data sebelum digunakan untuk melatih model."
-      ],
-      "metadata": {
-        "id": "az2JhUIX6xl1"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Encoding merupakan proses untuk membuat sebuah indeks dalam bentuk bilangan bulat yang mewakili kategori tertentu dalam sebuah feature kategorik. Proses ini perlu dilakukan karena model machine learning hanya mampu memproses data dalam bentuk numerik."
-      ],
-      "metadata": {
-        "id": "Pe1cLuIq66VL"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Selain melakukan **encoding** terhadap **feature kategorik**, perlu juga dilakukan **scaling** pada **feature numerik**.\n",
+        "**Note:**\n",
         "\n",
-        "**Scaling** merupakan proses pengubahan skala pada data numerik. Proses ini dilakukan agar seluruh feature numerik memiliki skala yang terstandarisasi. Hal ini dapat meningkatkan efisiensi dalam proses pelatihan model nantinya."
+        "Tahapan selanjutnya yaitu `encoding` dan `scaling`.\n",
+        "- `Encoding` : proses membuat sebuah indeks dalam bentuk bilangan bulat yang mewakiliki kategori tertentu dalam sebuah feature. Proses ini perlu dilakukan karena model ML hanya mampu memproses data dalam bentuk numerik.\n",
+        "\n",
+        "- `Scaling` : proses pengubahan skala pada data numerik, yang dilakukan agar seluruh feature numerik memiliki skala yang ter`standarisasi`. Sehingga dapat meningkatkan efisiensi dalam proses pelatihan model\n",
+        "\n",
+        "Sebelum melakukan `encoding` dan `scaling`, perlu dilakukan pemisahan antara feature training (X) dan target (Y) terlebih dahulu"
       ],
       "metadata": {
-        "id": "jmGNec1U6-IH"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Sebelum melakukan encoding dan scaling, perlu juga dilakukan pemisahan antara feature training (X) dan target (Y). Proses ini dapat dilakukan dengan menjalankan kode berikut."
-      ],
-      "metadata": {
-        "id": "-FJfSdxm7LT2"
+        "id": "iX65SKc5hobX"
       }
     },
     {
@@ -7251,18 +7229,8 @@
       "metadata": {
         "id": "ZmIdLw_s7UbE"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Setelah berhasil memisahkan feature training dan target, kini saatnya melakukan proses encoding dan scaling terhadap feature training. Pada proyek ini, proses encoding dan scaling akan dilakukan menggunakan kedua helper function berikut.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "tOmL8F2ozVT3"
-      }
     },
     {
       "cell_type": "code",
@@ -7322,36 +7290,21 @@
       "metadata": {
         "id": "OOxLHAlu7nWG"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "*Function scaling()* digunakan untuk melakukan proses *scaling* dengan metode *Min-max scaling* (memanfaatkan *MinMaxScaler()* dari *scikit learn*). Ia merupakan metode *scaling* menggunakan nilai minimum dan maksimum yang terdapat dalam sebuah *feature* dan mengubah data dalam *feature* tersebut ke dalam skala 0-1. Selain itu, *function* ini juga akan menyimpan *object* yang digunakan untuk melakukan proses *scaling* pada setiap *feature* dalam sebuah berkas dengan format .joblib. Berkas ini akan sangat berguna untuk menjalankan proses *data preprocessing* dalam lingkup produksi atau *deployment*.\n",
-        "\n"
+        "**Note:**\n",
+        "\n",
+        "- Function `scaling()` di atas digunakan untuk melakukan proses `scaling` dengan menggunakan metode `MinMaxScaler` dari scikit-learn. Metode scaling tersebut menggunakan nilai minimum dan maksimum yang terdapat pada sebuah feature dan `mengubah data` tersebut ke dalam `skala 0-1`.\n",
+        "- Selain itu, function `scaling()` ini akan menyimpan object yang digubakan untuk melakukan proses scaling pada setiap feature yang akan disimpan dalam sebuah berkas dengan format `.joblib`. Berkas tersebut nantinya akan digunakan untuk menjalankan proses `data preprocessing` dalam lingkup `production` atau `deployment` dengan hasil yang konsisten.\n",
+        "- Function `encoding()` akan melakukan proses `encoding` pada seluruh feature categorical dengan bantuan `LabelEncoder()` dari scikit learn.\n",
+        "- Function `encoding()` juga akan menyimpan setiap object yang digunakan untuk melakukan proses encoding pada suatu feature categorical yang akan disimpan dalam sebuah berkas dengan format `.joblib.` Berkas tersebut nantinya akan digunakan untuk menjalankan proses `data preprocessing` dalam lingkup `production` atau `deployment` dengan hasil yang konsisten."
       ],
       "metadata": {
         "id": "BDHAXcBUzVRU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "*Function encoding()* akan melakukan proses *encoding* pada seluruh *feature* kategorik dengan bantuan *LabelEncoder()* dari *scikit learn*. Pada *function* ini juga akan menyimpan setiap *object* yang digunakan untuk melakukan proses *scaling* pada suatu *feature* kategorik. Tujuannya agar proses ini dapat dilakukan dalam lingkup *deployment* dengan hasil yang konsisten.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "9KZXwhQRzVO3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Berikut adalah kode penggunaan kedua *helper function* tersebut :"
-      ],
-      "metadata": {
-        "id": "_uLqLjLWzVMT"
       }
     },
     {
@@ -7387,13 +7340,15 @@
       "metadata": {
         "id": "ucQ6Xf5N0XzM"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Sekarang data yang digunakan telah diubah menjadi skala yang sama dan seluruh feature kategorik telah diubah ke dalam bentuk integer. Selanjutnya yaitu perlu melakukan encoding terhadap feature target pada data latih dan uji"
+        "**Note:**\n",
+        "\n",
+        "Hingga tahapan ini data yang digunakan telah berhasil diubah dalam skala yang sama dan seluruh feature categorical telah diubah ke dalam bentuk integer. Tahapan berikutnya yaitu kita perlu melakukan `encoding` juga terhadap feature target pada `data train` dan `data test`"
       ],
       "metadata": {
         "id": "GpmIGSUr3ugO"
@@ -7404,16 +7359,58 @@
       "source": [
         "encoder = LabelEncoder()\n",
         "encoder.fit(y_train)\n",
-        "new_y_train = encoder.transform(y_train)\n",
-        "joblib.dump(encoder, \"model/encoder_target.joblib\")\n",
         "\n",
-        "new_y_test = encoder.transform(y_test)"
+        "new_y_train = encoder.transform(y_train)\n",
+        "new_y_test = encoder.transform(y_test)\n",
+        "\n",
+        "joblib.dump(encoder, \"model/encoder_target.joblib\")"
       ],
       "metadata": {
-        "id": "mcqOGbub0X9v"
+        "id": "mcqOGbub0X9v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5bc4e76b-ae66-4f60-ba77-2c8383fa4e05"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['model/encoder_target.joblib']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_y_train"
+      ],
+      "metadata": {
+        "id": "hTIdEssxlpzD",
+        "outputId": "7206d99b-ef02-49e4-9a55-c9c45eb14a61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 0, 0, ..., 1, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -7425,9 +7422,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mx9kMwta0YBQ",
-        "outputId": "7bd97f6e-bf91-4b25-97d7-8b504c6f37b0"
+        "outputId": "e15cc591-3c37-498a-b268-3c23c645d99a"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7437,7 +7434,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 69
         }
       ]
     },
