--- a/Credit_Scoring_Analyst.ipynb
+++ b/Credit_Scoring_Analyst.ipynb
@@ -5795,7 +5795,7 @@
       "source": [
         "**Observation:**\n",
         "\n",
-        "Pada visualisasi data di atas terlihat beberapa feature yang memiliki `outlier` seperti pada feature `Monthly_Inhand_Salary`. Hal ini terjadi karena terdapat beberapa pelanggan yang memiliki pendapatan per bulan yang `jauh lebih besar` dibanding pelanggan pada umumnya. `Outlier` seperti ini dapat  diabaikan terlebih dahulu."
+        "Pada visualisasi data di atas terlihat beberapa feature yang memiliki `outlier` seperti pada feature `Monthly_Inhand_Salary`. Hal ini terjadi karena terdapat beberapa pelanggan yang memiliki pendapatan per bulan yang `jauh lebih besar` dibanding pelanggan pada umumnya. `Outlier` seperti ini `dapat diabaikan terlebih dahulu`."
       ],
       "metadata": {
         "id": "Nh2JKc_pTYnT"
@@ -5952,7 +5952,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(20,20))\n",
-        "sns.heatmap(new_df[numerical_columns].corr(), annot=True, cmap='YlGnBu', linecolor='black', linewidth=1)\n",
+        "sns.heatmap(new_df[numerical_columns].corr(), annot=True, cmap='RdBu', linecolor='black', linewidth=1)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -7450,22 +7450,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Principal Component Analysis atau PCA merupakan salah satu teknik reduksi (pengurangan) dimensi yang umum digunakan di industri. Ia merupakan prosedur yang mengurangi jumlah fitur dengan tetap mempertahankan informasi pada data. PCA adalah teknik untuk mereduksi dimensi, mengekstraksi fitur, dan mentransformasi data dari “n-dimensional space” ke dalam sistem berkoordinat baru dengan dimensi m, di mana m lebih kecil dari n.\n",
+        "**Note:**\n",
         "\n",
-        "Teknik PCA ini, umumnya digunakan untuk mereduksi feature asli menjadi sejumlah kecil feature baru yang tidak berkorelasi linier. Feature baru tersebut disebut komponen utama (PC). Idealnya, komponen utama ini dapat menangkap sebagian besar varians (berkorelasi dengan informasi) dalam feature asli sehingga saat teknik PCA diterapkan pada suatu data, ia hanya akan menggunakan komponen utama untuk merepresentasikan data asli.\n",
-        "\n"
+        "- `Principal Component Analysis`(PCA) adalah salah satu teknik untuk mengurangi jumlah feature pada data dengan tetap mempertahankan informasi pada data. PCA mentransformasi data dari `n-dimensional space` ke dalam sistem berkoordinat baru dengan dimensi-m (m lebih kecil dari n).\n",
+        "\n",
+        "- PCA umumnyaa digunakan untuk mereduksi feature asli menjadi sejumlah kecil feature yang tidak berkorelasi linear. Feature baru tersebut disebut dengan `principal component (PC)`. PC tersebut dapat menangkap sebagian besar varians (berkorelasi dengan informasi) dalam feature asli, sehingga ketika teknik PCA ini diterapkan pada suatu data, untuk mempresentasikan data asli ia hanya menggunakan PC."
       ],
       "metadata": {
         "id": "WLQ4DFhE0YF_"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Pada proyek ini akan melakukan PCA untuk mengatasi multikolinearitas yang terdapat pada feature numerik yang seperti pada visualisasi data berikut."
-      ],
-      "metadata": {
-        "id": "T_74kz0l4Phq"
       }
     },
     {
@@ -7500,10 +7492,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pada visualisasi data di atas terlebih beberapa feature yang saling berkorelasi satu sama lain. Namun pada seluruh feature tersebut tidak bisa langsung dilakukan PCA dalam satu proses, karena terdapat beberapa feature yang hanya berkorelasi pada feature tertentu. Oleh karena itu, perlu mengumpulkan feature yang saling berkorelasi tersebut dan hanya melakukan PCA pada feature tersebut.\n",
+        "**Note:**\n",
         "\n",
-        "Jika dilihat terdapat dua kelompok feature yang saling berkorelasi, maka dapat dikelompokkan menggunakan kode berikut.\n",
-        "\n"
+        "Pada project ini penerapan PCA dilakukan untuk mengatasi  multikolinearitas yang terdapat pada feature numerik seperti yang ditunjukkan pada visualisasi di atas."
+      ],
+      "metadata": {
+        "id": "Fb8Gtwh83kiz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Observation:**\n",
+        "- Pada visualisasi data di atas terlihat beberapa feature saling berkorelasi satu sama lain. Namun, pada seluruh feature tersebut tidak bisa langsung dilakukan PCA dalam satu proses karena terdapat beberapa feature yang hanya berkorelasi pada feature tertentu. Oleh karena itu, terlebih dahulu perlu dikelompokkan beberapa feature yang saling berkorelasi tersebut dan hanya melakukan PCA pada feature tersebut.\n",
+        "\n",
+        "- Apabila dilihat terdapat 2 kelompok feature yang saling berkorelasi"
       ],
       "metadata": {
         "id": "FI3INPQt0YJJ"
@@ -7541,9 +7544,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Setelah mengelompokkan feature yang saling berkorelasi, selanjtunya perlu menyiapkan sebuah dataframe baru yang nantinya akan menampung hasil dari proses PCA.\n",
+        "**Note:**\n",
         "\n",
-        "Berikut merupakan kode untuk melakukannya."
+        "Setelah mengelompokkan feature yang saling berkorelasi, selanjutnya perlu menyiapkan sebuah `dataframe` baru yang akan digunakan untuk menampung hasil dari proses PCA."
       ],
       "metadata": {
         "id": "tRAXB6bG0YL3"
@@ -7564,7 +7567,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Sekarang proses PCA terhadap kelompok feature pertama telah siap dilakukan. Untuk melakukan proses PCA, pertama perlu mencari jumlah komponen utama yang paling optimal. Untuk melakukannya, yaitu sebagai berikut :"
+        "**Note:**\n",
+        "\n",
+        "Hingga tahapan ini proses PCA terhadap kelompok feature pertama telah siap dilakukan. Untuk proses selanjutnya, terlebih dahulu perlu dicari jumlah `principal component` yang paling optimal dengan cara sebagai berikut"
       ],
       "metadata": {
         "id": "lsfjWagR0YRS"
@@ -7614,20 +7619,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pada kode di atas, dilakukan PCA dengan menggunakan seluruh komponen utama yang bisa terjadi (sesuai dengan jumlah feature asli)."
-      ],
-      "metadata": {
-        "id": "hikygeX70YWV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Visualisasi di atas menunjukkan visualisasi jumlah varians untuk setiap jumlah komponen utama.\n",
+        "**Observation:**\n",
         "\n",
-        "Berdasarkan gambar tersebut terlihat bahwa, dengan hanya mengambil 5 komponen utama kita telah memperoleh lebih dari 80% varians. Ini berarti kita bisa mewakili seluruh kelompok feature tersebut (ada 9 feature) hanya dengan 5 komponen utama.\n",
+        "Pada visualisasi di atas menunjukkan visualisasi jumlah varians untuk setiap jumlah `principal component`. Terlihat bahwa hanya dengan mengambil 5 `principal component` (PC), kita telah memperoleh lebih dari `80% varians`. Ini artinya kita bisa menggunakan 5 PC tersebut untuk mewakili seluruh kelompok feature tersebut yang aslinya berjumlah 9 feature.\n",
         "\n",
-        "Selanjutnya mari  coba melakukan proses PCA kembali dengan jumlah komponen utama sebanyak 5. Kemudian, kelompok feature asli akan diganti dengan 5 komponen utama dari proses PCA.\n"
+        "Berikutnya mari kita coba melakukan proses PCA kembali dengan jumlah `principal component` sebanyak 5. Lalu kelompok feature asli nya akan diganti dengan 5 `principal component` dari proses PCA."
       ],
       "metadata": {
         "id": "GUo4Q9TczVJi"
@@ -8022,7 +8018,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Selanjutnya yaitu melakukan proses yang sama untuk kelompok data berikutnya."
+        "**Note:**\n",
+        "\n",
+        "Tahapan berikutnya yaitu melakukan proses PCA untuk kelompok data berikutnya"
       ],
       "metadata": {
         "id": "L_pHh1wl6h2w"
@@ -8070,19 +8068,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Berdasarkan grafik tersebut terlihat bahwa hanya dengan menggunakan 2 komponen utama telah memperoleh 90% varians. Hal ini berarti kita bisa mewakili sebagian besar informasi dari seluruh feature pada kelompok ini (ada 4 feature) hanya menggunakan dua komponen utama."
+        "**Observation:**\n",
+        "\n",
+        "Berdasarkan visualisasi data di atas, dapat diketahui bahwa hanya dengan menggunakan 2 `principal component` (PC), kita telah memperoleh `90% varians`. Ini artinya kita bisa menggunakan 2 PC ini untuk mewakili sebagian besar informasi dari seluruh feature pada kelompok ini yang berjumlah `4 feature`.\n",
+        "\n",
+        "Berikutnya mari kita coba melakukan proses PCA kembali dengan jumlah `principal component` sebanyak 2. Lalu kelompok feature asli nya akan diganti dengan 2 `principal component` dari proses PCA."
       ],
       "metadata": {
         "id": "a99OsHLU6h0b"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Kemudian proses PCA dapat dilakukan kembali dengan jumlah komponen utama sebanyak 2. Lalu, mengganti kelompok feature tersebut dengan 2 komponen utama dari proses PCA."
-      ],
-      "metadata": {
-        "id": "y5qPxcoG6tiL"
       }
     },
     {
