:new: Created using Colab

--- a/Credit_Scoring_Analyst.ipynb
+++ b/Credit_Scoring_Analyst.ipynb
@@ -75,7 +75,7 @@
         "\n",
         "Tujaun dari project ini yaitu mengoptimalkan proses pemeriksaan risiko kredit ketika pengajuan pinjaman berlangsung dengan menerapkan model `machine learning`.\n",
         "\n",
-        "Pada project ini akan menggunakan beberapa model machine learning, di antaranya yaitu `logistic regression`, `decision tree`, `random forest`, `support vector machine`, and `K-Nearest Neighbors (KNN)`. Berdasarkan beberapa model machine learning yang dibangun tersebut, akan dipilih model dengan performa dan akurasi terbaik.\n"
+        "Pada project ini akan menggunakan dua model machine learning, yaitu ``decision tree` dan `random forest`. Berdasarkan dua model machine learning yang dibangun tersebut, akan dipilih model dengan performa dan akurasi terbaik.\n"
       ],
       "metadata": {
         "id": "3UUcDdgX67on"
@@ -8874,7 +8874,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Seperti yang telah dijelaskan pada bagian **Business Understanding** bahwa pada project ini akan menggunakan beberapa model machine learning, di antaranya yaitu `logistic regression`, `decision tree`, `random forest`, `support vector machine`, and `K-Nearest Neighbors (KNN)`. Berdasarkan beberapa model machine learning yang dibangun tersebut, akan dipilih model dengan performa dan akurasi terbaik."
+        "Seperti yang telah dijelaskan pada bagian **Business Understanding** bahwa pada project ini akan menggunakan beberapa model machine learning, di antaranya yaitu `decision tree` dan `random forest`. Berdasarkan dua model machine learning yang dibangun tersebut, akan dipilih model dengan performa dan akurasi terbaik."
       ],
       "metadata": {
         "id": "xNl8wi0Rd7kT"
