--- a/Credit_Scoring_Analyst.ipynb
+++ b/Credit_Scoring_Analyst.ipynb
@@ -185,7 +185,7 @@
       "metadata": {
         "id": "Nn577BtGVAhD"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -213,9 +213,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eV7ZvBRNOOY4",
-        "outputId": "2b43c829-a172-4058-c082-d0f26b3b05d3"
+        "outputId": "47e0eaa3-1632-4f7e-d6c1-f94e4dd1448e"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,9 +237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GuxGk5bUOOdF",
-        "outputId": "3b4b4c49-472f-47ea-b27b-bd899eb36a10"
+        "outputId": "8d035ac9-1bbf-492c-9cb9-e5ff0e94be27"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,8 +248,8 @@
             "Dataset URL: https://www.kaggle.com/datasets/parisrohan/credit-score-classification\n",
             "License(s): CC0-1.0\n",
             "Downloading credit-score-classification.zip to /content\n",
-            "100% 9.51M/9.51M [00:00<00:00, 16.6MB/s]\n",
-            "100% 9.51M/9.51M [00:00<00:00, 11.6MB/s]\n"
+            "  0% 0.00/9.51M [00:00<?, ?B/s]\n",
+            "100% 9.51M/9.51M [00:00<00:00, 124MB/s]\n"
           ]
         }
       ]
@@ -264,9 +264,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NiJdfncROOgm",
-        "outputId": "7da4006b-e061-4029-8320-dd1814ae79ea"
+        "outputId": "17b2d98c-9f55-4837-c4a3-6c320c99bf85"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x0nnO8plVU9_",
-        "outputId": "18364965-2c2b-44c9-f318-6e7b8725f7dc"
+        "outputId": "226984d0-0028-46e7-83c3-395dbc2d0e4c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,9 +337,9 @@
           "height": 573
         },
         "id": "Knb0hYYTOOnV",
-        "outputId": "2bcc3094-c79d-4c90-c35e-db669ac9efe8"
+        "outputId": "13cafa82-317e-4f3f-cf0c-bdd84a800d08"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +410,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dcfc00d1-db51-4356-b300-89d03b43421d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3a4e6b2e-fcf6-49b7-acdd-f35ef681870a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -621,7 +621,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dcfc00d1-db51-4356-b300-89d03b43421d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3a4e6b2e-fcf6-49b7-acdd-f35ef681870a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -673,12 +673,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dcfc00d1-db51-4356-b300-89d03b43421d button.colab-df-convert');\n",
+              "        document.querySelector('#df-3a4e6b2e-fcf6-49b7-acdd-f35ef681870a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dcfc00d1-db51-4356-b300-89d03b43421d');\n",
+              "        const element = document.querySelector('#df-3a4e6b2e-fcf6-49b7-acdd-f35ef681870a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -698,8 +698,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2872046c-ef78-4625-a4f4-444805935680\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2872046c-ef78-4625-a4f4-444805935680')\"\n",
+              "<div id=\"df-18896782-5112-4562-b94f-fe941b9cc2c9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-18896782-5112-4562-b94f-fe941b9cc2c9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -818,7 +818,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2872046c-ef78-4625-a4f4-444805935680 button');\n",
+              "        document.querySelector('#df-18896782-5112-4562-b94f-fe941b9cc2c9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -849,9 +849,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SGYpZ-sfWfio",
-        "outputId": "da07b714-f4c7-4bd6-fc35-6c93e6eedf3f"
+        "outputId": "e64c4c36-095b-40b4-a6b9-6066aee05403"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,6 +890,30 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Handling duplicate data\n",
+        "print(\"Jumlah duplikasi: \", df.duplicated().sum())"
+      ],
+      "metadata": {
+        "id": "3fi7QwylCidL",
+        "outputId": "964915ca-9210-4960-cce5-94ee49915602",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jumlah duplikasi:  0\n"
+          ]
         }
       ]
     },
